--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^24.7.1"
   },
   "dependencies": {
-    "immutable": "^4.0.0-rc.12"
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11"
   }
 }
