--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3"
   }
 }
