--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "jest": "^24.7.1"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-traverse": "^6.26.0",
+    "babylon": "^6.18.0",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "redux-immutable": "^4.0.0",
